Update user finished with his profile picture

--- a/src/main/resources/templates/home-doctor.html
+++ b/src/main/resources/templates/home-doctor.html
@@ -72,7 +72,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/profile(token=${token})}">My Profile</a>
+                    <a class="nav-link" th:href="@{/api/users/profile(token=${token})}">My Profile</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-danger" th:href="@{/logout}">Logout</a>
