--- a/src/main/resources/templates/home-patient.html
+++ b/src/main/resources/templates/home-patient.html
@@ -45,13 +45,16 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Welcome, <span th:text="${user.lastName} + ' ' + ${user.firstName}">Patient</span></a>
+        <a class="navbar-brand" href="#">
+            Welcome, <span th:text="${user.lastName} + ' ' + ${user.firstName}">Patient</span>
+        </a>
         <div class="ms-auto d-flex">
-            <a href="/patient/profile" class="nav-link">Profile</a>
-            <a th:href="@{/logout}" class="nav-link">Logout</a>
+            <a class="nav-link" th:href="@{/api/users/profile(token=${token})}">My Profile</a>
+            <a th:href="@{/logout}" class="nav-link ms-3">Logout</a> <!-- Ajout d'un espacement -->
         </div>
     </div>
 </nav>
+
 
 <!-- Content -->
 <div class="container py-5">
